Update: Code refactor and some checks.